syntax = "proto3";

import "anemos/protobeam/examples/basic.proto";
import "anemos/options.proto";
import "google/protobuf/timestamp.proto";


option java_package = "io.anemos.protobeam.examples";
option java_multiple_files = true;

package anemos.protobeam.examples;

message ProtoBeamOptionMessage {
    string test_name = 1;
    int32 test_index = 2;
    string option_deprecated = 3 [deprecated = true];
    string option_description = 4 [(anemos.field_meta) = {
        description: "A very detailed description"
    }];
}

message BigQueryOptionMessage {
    option (anemos.message_bigquery).time_partitioning_field =  "timestamp";

    google.protobuf.Timestamp timestamp = 3;
}

message BigQueryOptionMessageTruncateDay {
    option (anemos.message_bigquery).time_partitioning_field =  "timestamp";
    option (anemos.message_bigquery).add_time_partitioning_truncate_column =  DAY;

    google.protobuf.Timestamp timestamp = 3;
}

message BigQueryOptionMessageTruncateMonth {
    option (anemos.message_bigquery).time_partitioning_field =  "timestamp";
    option (anemos.message_bigquery).add_time_partitioning_truncate_column =  MONTH;

    google.protobuf.Timestamp timestamp = 3;
}

message BigQueryOptionMessageTruncateYear {
     option (anemos.message_bigquery).time_partitioning_field =  "timestamp";
     option (anemos.message_bigquery).add_time_partitioning_truncate_column =  YEAR;

     google.protobuf.Timestamp timestamp = 3;
}

message BigQueryOptionMessageTruncateMonthCustomColumnName {
    option (anemos.message_bigquery).time_partitioning_field =  "timestamp";
    option (anemos.message_bigquery).add_time_partitioning_truncate_column =  MONTH;
    option (anemos.message_bigquery).time_partitioning_truncate_column_name =  "CreatedMonth";

    google.protobuf.Timestamp timestamp = 3;
}